<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/inputRelativeLayout">
        <!---Texto mostrado en pantalla-->
        <TextView
            android:id="@+id/messagesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:scrollbarSize="16sp"
            android:textColor="@color/white" />

    </ScrollView>


    <RelativeLayout
        android:id="@+id/inputRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <!---Texto ingresado por la barra de abajo-->
        <EditText
            android:id="@+id/inputEditText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start"
            android:layout_margin="5dp"
            android:padding="15dp"
            android:layout_toStartOf="@id/sendButton"
            android:layout_alignParentStart="true"
            android:fontFamily="serif-monospace"
            android:hint="@string/consult"
            android:imeOptions="actionDone"
            android:inputType="textShortMessage"
            android:textColor="@color/white"
            android:layout_toLeftOf="@id/sendButton"
            android:layout_alignParentLeft="true"
            android:autofillHints="@string/consultText" />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:fontFamily="serif-monospace"
            android:textColor="@color/white"
            android:hint="@string/btnSend"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>